# dl_lecture_competition_pub

./: .gitignore  embed.py  eval.py  main.py  main2.py  prepare_cache.py  pyproject.toml  requirements.txt  script2.ipynb  train_both.py  train_brain_module.py  train_classifier.py  valid.py
configs/: baseline.yaml  clip.yaml  config-baseline.yaml  config-mac.yaml  resnet152.yaml  resnet18.yaml
src/: embed.py
src/notebooks/: ctf275.ipynb  dataset.ipynb  model_check.ipynb  pretrained.ipynb  train.py
src/script/: ctf275.ipynb  dataset.ipynb  model_check.ipynb  pretrained.ipynb  train.ipynb
